<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="vertical">

        <ImageView
            android:layout_width="200dp"
            android:layout_height="200dp"
            android:layout_marginBottom="100dp"
            android:src="@mipmap/ic_launcher" />

        <EditText
            android:id="@+id/edtUsuario"
            android:layout_width="200dp"
            android:layout_height="48dp"
            android:inputType="text"
            android:hint="@string/usuario" />

        <EditText
            android:id="@+id/edtPassword"
            android:layout_width="200dp"
            android:layout_height="48dp"
            android:ems="10"
            android:inputType="textPassword"
            android:hint="@string/password"/>


        <Button
            android:id="@+id/btnAceptar"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:enabled="false"
            android:text="@string/aceptar" />

        <Button
            android:id="@+id/btnLogout"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/cerrar_sesion" />

        <Button
            android:id="@+id/btnRegistrarse"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:text="@string/registrate"
            />
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>