<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Registro">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="vertical">

        <ImageView
            android:layout_width="200dp"
            android:layout_height="200dp"
            android:layout_marginBottom="100dp"
            android:src="@mipmap/ic_launcher" />

        <TextView
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:text="@string/usuario"
            android:textSize="20dp"
            />

        <EditText
            android:id="@+id/edtCrearUsuario"
            android:layout_width="200dp"
            android:layout_height="48dp"
            android:inputType="text"/>

        <TextView
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:text="@string/preguntar_password"
            android:textSize="20dp"
            />

        <EditText
            android:id="@+id/edtCrearPassword"
            android:layout_width="200dp"
            android:layout_height="48dp"
            android:ems="10"
            android:inputType="textPassword" />

        <TextView
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:text="@string/confirma_password"
            android:textSize="20dp"
            />

        <EditText
            android:id="@+id/edtConfirmarPassword"
            android:layout_width="200dp"
            android:layout_height="48dp"
            android:ems="10"
            android:inputType="textPassword" />

        <Button
            android:id="@+id/btnGuardarRegistro"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/guardar" />


    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>